--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,11 @@
 [phases.setup]
-nixPkgs = ["python311", "python311Packages.pip"]
+nixPkgs = ["python311", "python311Packages.pip", "python311Packages.virtualenv"]
 
 [phases.install]
-cmds = ["pip install -r backend/requirements.txt"]
+cmds = [
+  "python -m venv venv",
+  "source venv/bin/activate && pip install -r backend/requirements.txt"
+]
 
 [start]
-cmd = "cd backend && uvicorn main:app --host 0.0.0.0 --port $PORT"
+cmd = "cd backend && source ../venv/bin/activate && uvicorn main:app --host 0.0.0.0 --port $PORT"
